# aws-codedeploy-windows

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  appspec.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yaml  onCreateCommand.sh
.devcontainer.example/: postCreateCommand.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml  deploy.yaml
.vscode.example/: extensions.json  launch.json  settings.json
deploy/: AfterInstall.ps1  ApplicationStart.ps1  ApplicationStop.ps1  ValidateService.ps1
infra/: Bootstrap.userdata.jinja  Pulumi.yaml  __main__.py  alb.py  asg.py  codedeploy.py  codedeploy_application.py  components.py  export.py  github.py  image_builder.py  install-kftcvan-security-program.yaml  metadata.py  vpc.py
infra/dynamic/: __init__.py  cleanup_image_pipeline.py  trigger_image_pipeline.py
scripts/: build-and-upload.sh  deploy.sh
src/: test_nothing.py
