[project]
name = "aws-codedeploy-windows"
version = "0.1.0"
description = "My project starter template with Dev Container configured."
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = ["fastapi[standard]>=0.115.14"]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "factory-boy>=3.3.3",
    "faker>=37.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.12.0",
    "ty>=0.0.1a11",
]
infra = [
    "pulumi-aws~=6.70.1",
    "pulumi-extra~=0.1.0",
    "pulumi-policy~=1.17.0",
    "pulumi-random~=4.18.0",
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-tls>=5.1.1",
    "pulumi-awsx>=2.21.1",
    "pulumi-command>=1.0.2",
    "boto3>=1.38.6",
    "pulumi-github>=6.7.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report=term"]

[tool.coverage.run]
include = ["src/*"]
omit = ["test_*.py"]
